--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: ததஅக
-short_name: அஃக
+short_name: 498A, DV Act
 title: தனித் தமிழகராதிக் களஞ்சியம்
 description: தமிழ் உலகின் இலவச தமிழ் ஆங்கில அகராதி. தனித்தமிழ் இயக்கத்தின் அடுத்த முனைப்பு.
 description_short: தனித்தமிழ் இயக்கத்தின் முனைப்பு.
