--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,12 @@
-name: ததஅக
+name: ௪௯௮அ
 short_name: 498A, DV Act
-title: தனித் தமிழகராதிக் களஞ்சியம்
+title: சட்டப்பூர்வமான தீவிரவாதம்
 description: தமிழ் உலகின் இலவச தமிழ் ஆங்கில அகராதி. தனித்தமிழ் இயக்கத்தின் அடுத்த முனைப்பு.
-description_short: தனித்தமிழ் இயக்கத்தின் முனைப்பு.
+description_short: பொய் வழக்கு எதிரான போராட்டம்
 keywords: அஃக ததஅக தனித் தமிழகராதிக் களஞ்சியம் தனித்தமிழகராதிக்களஞ்சியம் Tamil Dictionary - Apps on Google Play offline tamil dictionary for windows அஃக தனித்தமிழகராதிக்களஞ்சியம் English-To-Tamil-Dictionary-and-Translation Tamil English Dictionary ThaniTamil offline-tamil-dictionary windows-7 Thani Iyakkam Akarathi Agarathi Kalanjiyam Meaning Tamil-Meaning தமிழ் தனித்தமிழ் இயக்கம் அகராதி அகரமுதலி தமிழகராதி களஞ்சியம் தமிழகராதிக்களஞ்சியம் தனித்தமிழகராதிக்களஞ்சியம் மின்னகராதி சொல்லுருவாக்கி வடமொழியாக்கம் வட மொழியாக்கம் கிரந்தம் கிரந்த நீக்கி சொல் உருவாக்கி தமிழில் சொற்களஞ்சியம் ஆங்கிலம் tamil-dictionary-for-windows English-English-Tamil-dictionary offline tamil dictionary wikipedia wiktionary wikiquote reader dictionary slob
-url: 'https://thanithamizhakarathikalanjiyam.github.io'
+url: 'https://dv498a.github.io'
 author: Pitchaimuthu
-#twitter:
-# username: benbalter
-# card: summary
-#facebook:
-# app_id: 1234
-# publisher: 1234
-# admins: 1234
-#baseurl: 'https://thanithamizhakarathikalanjiyam.github.io' Do not enable this line
 logo: '/images/ttak.png'
-#social:
-# name: Ben Balter   
 links:
 - வாடிவாசல், /
 - தரவிறக்கம், release_notes
@@ -35,13 +25,6 @@ get_started_links:
 - பண்பலை, isaiyinifm/
 - தனிதமிழ் சிறுபொழுது, ttak_tamil_time_promo
 - நன்றிகள், https://www.tamilinternetconference.org/selected-papers/
-
-#webmaster_verifications:
-# google: 1234
-# bing: 1234
-# alexa: 1234
-# yandex: 1234
-# baidu: 1234
 lang: ta_in
 paginate: 10
 
